Set home.html as default landing page, backup admin login

--- a/fronted/admin-login.html
+++ b/fronted/admin-login.html
@@ -6,7 +6,7 @@
     <title>Cynthia - Rental Property Management</title>
     <script>
         // Redirect to home.html immediately
-        window.location.replace('home.html');
+        window.location.href = 'home.html';
     </script>
 </head>
 <body>
