Improve mobile responsiveness and add mobile menu functionality
- Added mobile menu toggle functionality with JavaScript
- Enhanced mobile CSS with better touch targets (44px+ min height)
- Improved mobile typography and font sizes
- Added better mobile navigation menu styling
- Enhanced responsive breakpoints for phones and tablets
- Added mobile-specific spacing and layout adjustments
- Improved mobile input styling to prevent zoom on focus
- Added touch-friendly button sizes and spacing

--- a/fronted/home.html
+++ b/fronted/home.html
@@ -47,6 +47,24 @@
                         <i class="fas fa-cog"></i> Admin
                     </a>
                 </div>
+                <!-- Mobile Menu Toggle -->
+                <div class="mobile-menu-toggle" onclick="toggleMobileMenu()">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                <!-- Mobile Navigation Menu -->
+                <div class="mobile-nav-menu" id="mobileNavMenu">
+                    <a href="#features" class="nav-link" onclick="closeMobileMenu()">Features</a>
+                    <a href="#about" class="nav-link" onclick="closeMobileMenu()">About</a>
+                    <a href="#contact" class="nav-link" onclick="closeMobileMenu()">Contact</a>
+                    <a href="chatbot-demo.html" class="nav-link" onclick="closeMobileMenu()">
+                        <i class="fas fa-robot"></i> Chatbot Demo
+                    </a>
+                    <a href="index.html" class="nav-link admin-link" onclick="closeMobileMenu()">
+                        <i class="fas fa-cog"></i> Admin
+                    </a>
+                </div>
             </div>
         </nav>
 
