--- a/fronted/site-visit-terms.html
+++ b/fronted/site-visit-terms.html
@@ -383,7 +383,7 @@
         function declineTerms() {
             if (confirm('By declining these terms, you will not be able to schedule site visits. Are you sure?')) {
                 // Redirect to main page or dashboard without setting acceptance
-                window.location.href = 'index.html';
+                window.location.href = 'home.html';
             }
         }
         
