--- a/fronted/admin-login.html
+++ b/fronted/admin-login.html
@@ -3,16 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cynthia - Rental Property Management</title>
-    <script>
-        // Redirect to home.html immediately
-        window.location.href = 'home.html';
-    </script>
+    <title>Admin Login - Rental Property Management</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/auth.css">
+    <link rel="stylesheet" href="css/dashboard.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-    <p>Redirecting to Cynthia Rental System...</p>
-    <p>If you are not redirected automatically, <a href="home.html">click here</a>.</p>
-</body>
 </html>
                                     <i class="fas fa-home" style="font-size: 48px; color: #fff; opacity: 0.3;"></i>
                                     <p style="color: #fff; opacity: 0.8; margin-top: 20px;">Rental System Admin</p>
@@ -87,6 +84,12 @@
                                     or
                                     <a href="login.html" style="color: #0095f6; text-decoration: none; font-weight: 500;">
                                         Sign In
+                                    </a>
+                                </p>
+                                <p style="font-size: 12px; color: #8e8e8e; margin-top: 10px;">
+                                    <a href="home.html" style="color: #0095f6; text-decoration: none; font-weight: 500;">
+                                        <i class="fas fa-arrow-left" style="margin-right: 5px;"></i>
+                                        Back to Main Site
                                     </a>
                                 </p>
                             </div>
