--- a/fronted/home.html
+++ b/fronted/home.html
@@ -43,7 +43,7 @@
                     <a href="chatbot-demo.html" class="nav-link" style="color: #667eea;">
                         <i class="fas fa-robot"></i> Chatbot Demo
                     </a>
-                    <a href="index.html" class="nav-link admin-link">
+                    <a href="admin-login.html" class="nav-link admin-link">
                         <i class="fas fa-cog"></i> Admin
                     </a>
                 </div>
@@ -61,7 +61,7 @@
                     <a href="chatbot-demo.html" class="nav-link" onclick="closeMobileMenu()">
                         <i class="fas fa-robot"></i> Chatbot Demo
                     </a>
-                    <a href="index.html" class="nav-link admin-link" onclick="closeMobileMenu()">
+                    <a href="admin-login.html" class="nav-link admin-link" onclick="closeMobileMenu()">
                         <i class="fas fa-cog"></i> Admin
                     </a>
                 </div>
@@ -325,7 +325,7 @@
                         
                         <div class="footer-column">
                             <h4>Admin</h4>
-                            <a href="index.html">Admin Login</a>
+                            <a href="admin-login.html">Admin Login</a>
                             <a href="#">Property Management</a>
                             <a href="#">System Settings</a>
                         </div>
@@ -378,7 +378,7 @@
                 </div>
                 
                 <div class="admin-option">
-                    <p>Are you a property manager? <a href="index.html">Access Admin Panel</a></p>
+                    <p>Are you a property manager? <a href="admin-login.html">Access Admin Panel</a></p>
                 </div>
             </div>
         </div>
