Make all brand/logo links consistently point to home.html
- Made nav-brand clickable in home.html, dashboard.html
- Made logo clickable in login.html and register.html
- Added hover effects and smooth transitions for brand links
- Enhanced CSS styling for interactive brand elements
- Ensures consistent navigation back to home page from any screen
- Improved user experience with visual feedback on hover

--- a/fronted/login.html
+++ b/fronted/login.html
@@ -13,10 +13,10 @@
     <div class="auth-container">
         <div class="auth-card">
             <div class="auth-header">
-                <div class="logo">
+                <a href="home.html" class="logo">
                     <i class="fas fa-home"></i>
                     <h1>Rental System</h1>
-                </div>
+                </a>
                 <h2>Welcome back</h2>
                 <p>Sign in to your account</p>
             </div>
