--- a/fronted/register.html
+++ b/fronted/register.html
@@ -13,10 +13,10 @@
     <div class="auth-container">
         <div class="auth-card">
             <div class="auth-header">
-                <div class="logo">
+                <a href="home.html" class="logo">
                     <i class="fas fa-home"></i>
                     <h1>Rental System</h1>
-                </div>
+                </a>
                 <h2>Create your account</h2>
                 <p>Join us to find your perfect rental home</p>
             </div>
