--- a/fronted/dashboard.html
+++ b/fronted/dashboard.html
@@ -13,10 +13,10 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <div class="nav-brand">
+            <a href="home.html" class="nav-brand">
                 <i class="fas fa-home"></i>
                 <span>Rental System</span>
-            </div>
+            </a>
             
             <div class="nav-menu">
                 <a href="#" class="nav-link active" data-section="dashboard">
