--- a/fronted/home.html
+++ b/fronted/home.html
@@ -32,10 +32,10 @@
         <!-- Navigation Header -->
         <nav class="landing-nav">
             <div class="nav-container">
-                <div class="nav-brand">
+                <a href="home.html" class="nav-brand">
                     <i class="fas fa-home"></i>
                     <span>Rental System</span>
-                </div>
+                </a>
                 <div class="nav-links">
                     <a href="#features" class="nav-link">Features</a>
                     <a href="#about" class="nav-link">About</a>
