--- a/fronted/admin-login.html
+++ b/fronted/admin-login.html
@@ -66,80 +66,82 @@
                         </div>
                     </div>
 
-                    <!-- Login Form -->
-                    <div class="login-form-container">
-                        <div class="login-card">
-                            <div class="logo">
-                                <i class="fas fa-home gradient-icon"></i>
-                                <h1>Rental System</h1>
-                            </div>
-
-                            <div id="loginError" class="error-message" style="display: none;"></div>
-
-                            <form id="loginForm">
-                                <div class="form-group">
-                                    <input
-                                        type="email"
-                                        id="email"
-                                        name="email"
-                                        placeholder="Email address"
-                                        class="form-input"
-                                        required
-                                    />
+                    <!-- Login Page Wrapper for JS show/hide -->
+                    <div id="loginPage" class="page">
+                        <div class="login-form-container">
+                            <div class="login-card">
+                                <div class="logo">
+                                    <i class="fas fa-home gradient-icon"></i>
+                                    <h1>Rental System</h1>
                                 </div>
 
-                                <div class="form-group">
-                                    <input
-                                        type="password"
-                                        id="password"
-                                        name="password"
-                                        placeholder="Password"
-                                        class="form-input"
-                                        required
-                                    />
+                                <div id="loginError" class="error-message" style="display: none;"></div>
+
+                                <form id="loginForm">
+                                    <div class="form-group">
+                                        <input
+                                            type="email"
+                                            id="email"
+                                            name="email"
+                                            placeholder="Email address"
+                                            class="form-input"
+                                            required
+                                        />
+                                    </div>
+
+                                    <div class="form-group">
+                                        <input
+                                            type="password"
+                                            id="password"
+                                            name="password"
+                                            placeholder="Password"
+                                            class="form-input"
+                                            required
+                                        />
+                                    </div>
+
+                                    <button type="submit" class="login-button" id="loginBtn">
+                                        <span id="loginBtnText">Sign in</span>
+                                        <div id="loginSpinner" class="loading-spinner" style="display: none;"></div>
+                                    </button>
+                                </form>
+
+                                <div class="divider">
+                                    <span>OR</span>
                                 </div>
 
-                                <button type="submit" class="login-button" id="loginBtn">
-                                    <span id="loginBtnText">Sign in</span>
-                                    <div id="loginSpinner" class="loading-spinner" style="display: none;"></div>
-                                </button>
-                            </form>
-
-                            <div class="divider">
-                                <span>OR</span>
+                                <div style="text-align: center; color: #8e8e8e; font-size: 12px;">
+                                    <p>Admin access only</p>
+                                    <p style="margin-top: 8px;">
+                                        <i class="fas fa-user" style="margin-right: 4px;"></i>
+                                        Manage rental properties
+                                    </p>
+                                </div>
                             </div>
 
-                            <div style="text-align: center; color: #8e8e8e; font-size: 12px;">
-                                <p>Admin access only</p>
-                                <p style="margin-top: 8px;">
-                                    <i class="fas fa-user" style="margin-right: 4px;"></i>
-                                    Manage rental properties
+                            <div class="footer-card">
+                                <p>Rental System Admin Panel</p>
+                                <p style="margin-top: 8px; font-size: 12px;">
+                                    Secure access for property management
                                 </p>
-                            </div>
-                        </div>
-
-                        <div class="footer-card">
-                            <p>Rental System Admin Panel</p>
-                            <p style="margin-top: 8px; font-size: 12px;">
-                                Secure access for property management
-                            </p>
-                            <div style="margin-top: 15px; padding-top: 15px; border-top: 1px solid #dbdbdb;">
-                                <p style="font-size: 12px; color: #8e8e8e;">
-                                    Looking for rentals? 
-                                    <a href="register.html" style="color: #0095f6; text-decoration: none; font-weight: 500;">
-                                        Create Account
-                                    </a>
-                                    or
-                                    <a href="login.html" style="color: #0095f6; text-decoration: none; font-weight: 500;">
-                                        Sign In
-                                    </a>
-                                </p>
-                                <p style="font-size: 12px; color: #8e8e8e; margin-top: 10px;">
-                                    <a href="home.html" style="color: #0095f6; text-decoration: none; font-weight: 500;">
-                                        <i class="fas fa-arrow-left" style="margin-right: 5px;"></i>
-                                        Back to Main Site
-                                    </a>
-                                </p>
+                                <div style="margin-top: 15px; padding-top: 15px; border-top: 1px solid #dbdbdb;">
+                                    <p style="font-size: 12px; color: #8e8e8e;">
+                                        Looking for rentals? 
+                                        <a href="register.html" style="color: #0095f6; text-decoration: none; font-weight: 500;">
+                                            Create Account
+                                        </a>
+                                        or
+                                        <a href="login.html" style="color: #0095f6; text-decoration: none; font-weight: 500;">
+                                            Sign In
+                                        </a>
+                                    </p>
+                                    <p style="font-size: 12px; color: #8e8e8e; margin-top: 10px;">
+                                        <a href="home.html" style="color: #0095f6; text-decoration: none; font-weight: 500;">
+                                            <i class="fas fa-arrow-left" style="margin-right: 5px;"></i>
+                                            Back to Main Site
+                                        </a>
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
