--- a/fronted/login.html
+++ b/fronted/login.html
@@ -80,19 +80,11 @@
                 </form>
                 
                 <div class="verification-form" style="display: none;">
-                    <p>Enter the verification code:</p>
+                    <p>Enter the 6-digit verification code:</p>
                     <form id="quickVerificationForm">
                         <div class="form-group">
-                            <div class="otp-input-container">
-                                <input type="text" class="otp-input" maxlength="1" />
-                                <input type="text" class="otp-input" maxlength="1" />
-                                <input type="text" class="otp-input" maxlength="1" />
-                                <input type="text" class="otp-input" maxlength="1" />
-                                <input type="text" class="otp-input" maxlength="1" />
-                                <input type="text" class="otp-input" maxlength="1" />
-                            </div>
+                            <input type="text" id="quickOtpInput" name="otp" maxlength="6" placeholder="Enter verification code" required class="form-input" />
                         </div>
-                        
                         <button type="submit" class="auth-btn">
                             <span class="btn-text">Verify Email</span>
                             <span class="btn-loading" style="display: none;">
