--- a/fronted/register.html
+++ b/fronted/register.html
@@ -114,14 +114,7 @@
                 
                 <form id="verificationForm">
                     <div class="form-group">
-                        <div class="otp-input-container">
-                            <input type="text" class="otp-input" maxlength="1" />
-                            <input type="text" class="otp-input" maxlength="1" />
-                            <input type="text" class="otp-input" maxlength="1" />
-                            <input type="text" class="otp-input" maxlength="1" />
-                            <input type="text" class="otp-input" maxlength="1" />
-                            <input type="text" class="otp-input" maxlength="1" />
-                        </div>
+                        <input type="text" id="otpInput" name="otp" placeholder="Enter 6-digit code" maxlength="6" required class="form-input" />
                     </div>
                     
                     <button type="submit" class="auth-btn" id="verifyBtn">
