updated admin login 2

--- a/fronted/admin-login.html
+++ b/fronted/admin-login.html
@@ -532,7 +532,7 @@
     <!-- Main Content Container -->
     <div class="page-container">
         <!-- Login Page -->
-        <div class="auth-container">
+        <div id="loginPage" class="page auth-container" style="display: block;">
             <div class="login-form-container">
                 <!-- Main Login Card -->
                 <div class="login-card">
