fixed prices to per month

--- a/fronted/admin-login.html
+++ b/fronted/admin-login.html
@@ -535,8 +535,8 @@
                     <div class="form-row">
                         <div class="form-group">
                             <label class="form-label">Monthly Rent (KSh) *</label>
-                            <input type="number" id="housePrice" name="price_per_night" class="form-input" step="1" min="0" required />
-                            <small class="form-help">Enter the monthly rent amount. This will be divided by 30 for daily calculations.</small>
+                            <input type="number" id="housePrice" name="price_per_month" class="form-input" step="1" min="0" required />
+                            <small class="form-help">Enter the monthly rent amount in Kenyan Shillings.</small>
                         </div>
                         
                         <div class="form-group">
