--- a/fronted/site-visit-terms.html
+++ b/fronted/site-visit-terms.html
@@ -19,12 +19,18 @@
             min-height: 100vh;
             padding: 20px 0;
             line-height: 1.6;
+            width: 100%;
+            overflow-x: hidden;
         }
 
         .page-container {
             max-width: 1200px;
             margin: 0 auto;
             padding: 0 20px;
+            width: 100%;
+            box-sizing: border-box;
+            display: block;
+            position: relative;
         }
 
         .terms-container {
@@ -32,7 +38,10 @@
             border-radius: 20px;
             box-shadow: 0 20px 60px rgba(0, 0, 0, 0.15);
             overflow: hidden;
-            margin: 20px 0;
+            margin: 20px auto;
+            width: 100%;
+            max-width: 100%;
+            position: relative;
         }
         
         .terms-header {
