--- a/fronted/login.html
+++ b/fronted/login.html
@@ -45,7 +45,7 @@
                         <span class="checkmark"></span>
                         Remember me
                     </label>
-                    <a href="#" class="forgot-password">Forgot Password?</a>
+                    <a href="forgot-password.html" class="forgot-password">Forgot Password?</a>
                 </div>
 
                 <button type="submit" class="auth-btn" id="loginBtn">
