implemented forgot password update

--- a/fronted/home.html
+++ b/fronted/home.html
@@ -380,7 +380,7 @@
                     </form>
                     
                     <div class="auth-links">
-                        <a href="#" onclick="alert('Password reset functionality coming soon!')">Forgot Password?</a>
+                        <a href="forgot-password.html">Forgot Password?</a>
                     </div>
                 </div>
 
